--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Batman</title>
@@ -37,6 +40,54 @@
         </div>
     </header>
 
+    <main class="main">
+        <div class="container">
+            <div class="main__rating">
+                <div class="main__rating-title">2022, боевик, триллер</div>
+                <div class="main__rating-wrap">
+                    <div class="main__rating-stars">
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star star-active">
+                            <img src="img/star.svg" alt="">
+                        </div>
+                        <div class="main__rating-star">
+                            <img src="img/star_empty.svg" alt="">
+                        </div>
+                        <div class="main__rating-star">
+                            <img src="img/star_empty.svg" alt="">
+                        </div>
+                        <div class="main__rating-star">
+                            <img src="img/star_empty.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="main__rating-number">7/10</div>
+                </div>
+
+            </div>
+            <h1 class="main__header">Бэтмен</h1>
+            <div class="main__description">
+                После двух лет поисков правосудия на улицах Готэма для своих сограждан Бэтмен становится олицетворением беспощадного возмездия. Когда в городе происходит серия жестоких нападений на представителей элиты, загадочные улики приводят Брюса Уэйна в самые темные закоулки преступного мира. Теперь под прицелом оказывается сам Бэтмен.
+            </div>
+            <a href="#" class="main__button">Купить билеты</a>
+        </div>
+    </main>
 
     <footer class="footer">
         <div class="container">
